--- a/app/src/main/res/layout/activity_controlstatements.xml
+++ b/app/src/main/res/layout/activity_controlstatements.xml
@@ -64,7 +64,7 @@
         android:id="@+id/button_choice3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hamza"
+        android:text="Huzaifa"
         android:background="@drawable/rounded_corners"
         android:padding="8dp"
         android:layout_marginBottom="24dp"
