--- a/app/src/main/res/layout/activity_arrays_results.xml
+++ b/app/src/main/res/layout/activity_arrays_results.xml
@@ -2,12 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/controlstatementsresults"
+    android:id="@+id/activityarrays"
     android:padding="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controlstatementspackage.controlstatementsResults">
-
+    tools:context=".arraypackage.arraysResults">
     <TextView
         android:id="@+id/grade"
         android:layout_width="match_parent"
@@ -38,5 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/outOf"
         android:layout_centerHorizontal="true"
+
         />
+
 </RelativeLayout>
