--- a/app/src/main/res/layout/activity_basicsandhistory.xml
+++ b/app/src/main/res/layout/activity_basicsandhistory.xml
@@ -34,6 +34,7 @@
 
     <TextView
         android:id="@+id/question"
+        android:background="@drawable/questions_design"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textAlignment="center"
